Colocando comentarios no codigo do Template do site

--- a/template/template.html
+++ b/template/template.html
@@ -26,7 +26,7 @@
         <img src="img-site/banner-vacina.jpeg" alt="">
     </div>
     <main>
-
+        <!-- Colocar todo conteudo do "meio" do site aqui dentro -->
     </main>
     
     <footer>
@@ -34,13 +34,13 @@
             <div class="fale_conosco">
                 <p class="titulos_footer">Fale conosco</p>
                 <div class="barra"></div>
-                <a href="mailto:patrik.souza@sptech.school">atendimento@thermocarry</a>
+                <a href="mailto:patrik.souza@sptech.school">atendimento@thermocarry</a> <!-- Substituir esse email depois -->
             </div>
             <div class="sac">
                 <p class="titulos_footer">Sac</p>
                 <div class="barra"></div>
                 <a href="tel:+5511983326043">(xx)xxxx-xxxx</a>
-            </div>
+            </div> <!-- Substituir o numero depois -->
             <div class="logo_footer">
                 <img src="img-site/logo_thermo-carry-2.png" alt="">
                 <!-- <p>© 2022 ThermoCarry • Todos os direitos reservados •</p> DESISTO DE DEIXAR ESSA PORRA NO MEIO-->
