--- a/template/template.css
+++ b/template/template.css
@@ -10,6 +10,9 @@ body{
 header{
     background-color: #61CBED;
     display: flex;
+    position: fixed;
+    width: 100vw;
+    box-shadow: 0px 4px 8px white;
 }
 
 .container{
@@ -65,11 +68,11 @@ header .container{
 }
 
 main {
-    background-image: url(img-site/fundo-site-linhas-2.png);
-    background-size: cover;
-    background-position: center;
+/*      background-image: url(img-site/fundo-site-linhas-2.png);
+    background-repeat: no-repeat;
+    background-size:contain;
+    background-position: bottom;  */
     height: 100vh;
-    display: flex;
 }
 
 footer{
@@ -136,16 +139,16 @@ footer{
     height: 20vh;
 }
 
-/* .logo_footer p{
+ .logo_footer p{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 0.6em;
+    font-size: 0.8em;
     font-weight: 200;
     font-style: italic;
     margin-top: 15vh;
-    margin-left: -1vw;
-} */
+    margin-left: -5vw;
+} 
 
 .redes_socias{
     display: flex;
