--- a/template/template.html
+++ b/template/template.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThermoCarry V02</title>
     <link rel="stylesheet" href="template.css">
+    <link rel="shortcut icon" href="img-site/logo_thermo-carry-2.png" type="image/x-icon" />
+    <title>ThermoCarry - Template</title>
 </head>
 <body>
     <header>
@@ -17,7 +18,7 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="#">Login</a></li>
                 <li><a href="#">Cadastro</a></li>
-                <li><a href="#">Simulador financeiro</a></li>
+                <li><a href="#">Simulador</a></li>
                 <li><a href="#">Dashboard</a></li>
             </ul>
         </div>
@@ -43,7 +44,7 @@
             </div> <!-- Substituir o numero depois -->
             <div class="logo_footer">
                 <img src="img-site/logo_thermo-carry-2.png" alt="">
-                <!-- <p>© 2022 ThermoCarry • Todos os direitos reservados •</p> DESISTO DE DEIXAR ESSA PORRA NO MEIO-->
+                <p>© 2022 ThermoCarry • Todos os direitos reservados •</p>
             </div>
            <div class="redes_socias">
                 <p class="titulos_footer">Redes Socias</p>
