--- a/pagina-chamado/chamado-style.css
+++ b/pagina-chamado/chamado-style.css
@@ -22,22 +22,21 @@ body {
 }
 
 #botao-um {
-    background-color: rgba(187, 56, 56, 0.822);
-    padding: 20px 80px 20px 90px;
-    border-radius: 50px;
-    margin-top: 50px;
+    background-color:rgba(255, 255, 255, 0.321);
+    padding: 20px 90px 20px 90px;
+    border-end-start-radius: 50px;
 }
 
 #botao-dois {
-    background-color: rgba(187, 56, 56, 0.822);
+    background-color: rgba(255, 255, 255, 0.318);
     padding: 20px 90px 20px 90px;
-    border-radius: 50px;
+    border-end-start-radius: 50px;
 }
 
 #botao-tres {
-    background-color: rgba(187, 56, 56, 0.822);
+    background-color: rgba(255, 255, 255, 0.318);
     padding: 20px 80px 20px 90px;
-    border-radius: 50px;
+    border-end-start-radius: 50px;
 }
 
 #botao-sair {
