--- a/tela-home/tela-home/template.css
+++ b/tela-home/tela-home/template.css
@@ -1,4 +1,4 @@
-body{
+body {
     margin: 0px;
     background-image: linear-gradient(to bottom, #61CBED, #e4e5e6 80%);
     font-family: sans-serif;
@@ -7,18 +7,18 @@ body{
 }
 
 
-header{
+header {
     background-color: #61CBED;
     display: flex;
 }
 
-.container{
+.container {
     width: 80vw;
     display: flex;
     margin: 0 auto;
 }
 
-header .container{
+header .container {
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -29,26 +29,26 @@ header .container{
     z-index: 1;
 }
 
-.logo img{
+.logo img {
     width: 28vw;
 }
 
-.navbar{
+.navbar {
     list-style: none;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0;
-    
-    
+
+
 }
 
-.navbar li{
+.navbar li {
     display: flex;
-    
+
 }
 
-.navbar li a{
+.navbar li a {
     color: #ffffff;
     text-decoration: none;
     font-size: 1em;
@@ -56,20 +56,20 @@ header .container{
     margin-right: 3vw;
 }
 
-.navbar li :hover{
+.navbar li :hover {
     color: blue;
     font-size: 1.2em;
     transition: 0.6s;
 }
 
-.navbar li :active{
+.navbar li :active {
     color: rgb(255, 0, 0);
     font-size: 1.1em;
     transition: 0.2s;
 }
 
 
-.banner{
+.banner {
     width: 100vw;
     height: 63vh;
     margin-top: 90px;
@@ -78,17 +78,24 @@ header .container{
     border-bottom: 5px solid rgb(255, 255, 255);
     background-size: cover;
 }
-@keyframes slide{
-    0%, 30% {
+
+@keyframes slide {
+
+    0%,
+    30% {
         background-image: url(banner-vacina.jpg);
     }
-    35%, 65% {
+
+    35%,
+    65% {
         background-image: url(img-site/banner-teste.png);
     }
-    70%, 100% {
+
+    70%,
+    100% {
         background-image: url(covid_vacines_banner.jpg);
     }
-    
+
 }
 
 
@@ -99,17 +106,18 @@ main {
 }
 
 
-.reservado{
+.reservado {
     display: flex;
     text-justify: center;
 }
-.containermain{
+
+.containermain {
     display: flex;
-    justify-items: center ;
-    position:absolute;
+    justify-items: center;
+    position: absolute;
     margin: 50%;
     text-align: center;
-    background-color:#ecf0f1d0;
+    background-color: #ededed;
     width: 35%;
     height: 400px;
     padding: 50px;
@@ -123,13 +131,15 @@ main {
     box-shadow: 10px 10px 40px white;
     border: solid 2px #61caed91;
 }
-.containermain2{
+
+.containermain2 {
     display: flex;
     justify-items: center;
-    position:absolute;
+    position: absolute;
     margin: 50%;
     text-align: center;
-    background-color:#ecf0f1d0;
+/*     background-color: #ecf0f1d0; */
+    background-color: #ededed;
     width: 40%;
     height: 400px;
     padding: 50px;
@@ -143,75 +153,228 @@ main {
     box-shadow: -10px 10px 40px white;
     border: solid 2px #61caed91;
 }
-.containermain:hover  {
+
+.containermain:hover {
     -webkit-transform: scale(1.02);
     -ms-transform: scale(1.02);
     transform: scale(1.02);
     border: solid 2px #51b1d1cf;
     background-color: rgba(255, 255, 255, 0.827);
-    
+
 }
+
 .containermain:hover .titulo {
     color: white;
-    text-shadow: 0px 5px 10px red; 
+    text-shadow: 0px 5px 10px red;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.containermain:hover p{
+    border: solid red 2.5px;
 }
+
 .containermain2:hover {
     -webkit-transform: scale(1.02);
     -ms-transform: scale(1.02);
     transform: scale(1.02);
     border: solid 2px #51b1d1cf;
     background-color: rgba(255, 255, 255, 0.827);
-    
+
+}
+
+.containermain2:hover .missaobox{
+    border: solid red 2.5px;
+}
+
+.containermain2:hover .visaobox{
+    border: solid red 2.5px;
 }
 
 
-.cm_conteudo h1{
+.containermain2:hover .valoresbox{
+    border: solid red 2.5px;
+}
+
+.containermain2:hover img{
+    border: solid 2.5px red;
+}
+
+
+.cm_conteudo h1 {
     text-transform: uppercase;
     font-size: 2.5em;
     font-weight: 800;
     color: white;
-    text-shadow: 0px 5px 10px #61caed; 
+    text-shadow: 0px 5px 10px #61caed;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-bottom: 20px;
+    margin-bottom: 5%;
 
-    
+
 }
 
-.cm_conteudo p{
+
+.cm_conteudo p {
     font-weight: 500;
-    font-size: 1.2em;
-    color:black ;
+    font-size: 1.1em;
+    color: #000000;
     display: flex;
     margin: auto;
-    height: 300px;
-    width: 500px;
+    height: 55vh;
+    width: 30vw;
+    background-color: #9adff6;
+    background-image: linear-gradient(to left, white, #6bdaff);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 60px;
+    border: solid rgb(69, 130, 237) 2.5px;
+    padding: 0px 20px 0px 20px;
+    /*     background-clip: padding-box;
+    border-image: linear-gradient(to right, #9adff6, red) 1;
+    border-radius: inherit;
+    border-radius: 20px; */
+}
+
+/* .cm_conteudo p:hover{
+    color: black;
+    background-color: #61caed;
+    border: solid rgb(255, 0, 0) 2.5px;
+    transition: 0.7s;
+} */
+
+.containermain2 .icones {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.containermain2 .icones img {
+    margin: 20% 0%;
+}
+
+.containermain2 .conteudo {
+    width: 400px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.icones img{
+    border: solid blue 2.5px;
+    border-radius: 100px;
+    padding: 0px;
+    height: 100px;
+}
+
+.containermain2 .conteudo .missao {
+    width: 460px;
+    height: 140px;
+    display: flex;
+    justify-content: top;
+    align-items: center;
+}
+
+.containermain2 .conteudo .visao {
+    width: 460px;
+    height: 140px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.containermain2 .conteudo .valores {
+    width: 460px;
+    height: 140px;
+    display: flex;
+    justify-content: bottom;
+    align-items: center;
+
+}
+
+.valores ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: center;
+    text-align: left;
+}
+
+.visao {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+}
+
+.visaobox {
+    display: flex;
+    margin: auto;
+    height: 100px;
+    width: 350px;
     background-color: #61caed;
     border-radius: 90px;
     justify-content: center;
     align-items: center;
     text-align: center;
-    border: solid red 2.5px;
-    padding: 0px 20px 0px 20px;
-    
+    border: solid rgb(69, 130, 237) 2.5px;
+    padding-right: 32%;
+    padding-left: 5%;
+    margin-left: 4%;
+    background-image: linear-gradient(to left, white, #6bdaff);
 }
 
-footer{
+.valoresbox {
+    display: flex;
+    margin: auto;
+    padding: auto;
+    height: 100px;
+    width: 350px;
+    /*     background-color: #61caed; */
+    border-radius: 90px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border: solid rgb(69, 130, 237) 2.5px;
+    padding-right: 34%;
+    margin-left: 2%;
+    background-image: linear-gradient(to left, white, #6bdaff);
+}
+
+.missaobox {
+    display: flex;
+    margin: auto;
+    height: 100px;
+    width: 350px;
+    /* background-color: #61caed; */
+    border-radius: 90px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border: solid rgb(69, 130, 237) 2.5px;
+    padding-right: 30%;
+    padding-left: 5%;
+    margin-left: 2%;
+    background-image: linear-gradient(to left, white, #6bdaff);
+}
+
+
+footer {
     background-color: black;
     width: 100vw;
     height: 45vh;
     display: flex
 }
 
-.conteudo_footer{
+.conteudo_footer {
     color: white;
     display: flex;
     position: relative;
 }
 
-.conteudo_footer a{
+.conteudo_footer a {
     font-style: italic;
     font-size: 0.8em;
     color: white;
@@ -219,7 +382,7 @@ footer{
     text-align: center;
 }
 
-.titulos_footer{
+.titulos_footer {
     text-align: center;
     text-transform: uppercase;
     font-size: 0.9em;
@@ -228,14 +391,14 @@ footer{
 }
 
 
-.fale_conosco{
+.fale_conosco {
     display: flex;
     flex-direction: column;
     padding-top: 5vh;
     padding-left: 5vw;
 }
 
-.barra{
+.barra {
     width: 12vw;
     height: 0.5vh;
     background-color: #61CBED;
@@ -244,7 +407,7 @@ footer{
 }
 
 
-.sac{
+.sac {
     display: flex;
     flex-direction: column;
     padding-top: 5vh;
@@ -252,17 +415,17 @@ footer{
 }
 
 
-.logo_footer{
-   position: absolute;
-   margin-left: 44vw;
+.logo_footer {
+    position: absolute;
+    margin-left: 44vw;
 }
 
-.logo_footer img{
+.logo_footer img {
     width: 12vw;
     height: 20vh;
 }
 
- .logo_footer p{
+.logo_footer p {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -271,9 +434,9 @@ footer{
     font-style: italic;
     margin-top: 15vh;
     margin-left: -5vw;
-} 
+}
 
-.redes_socias{
+.redes_socias {
     display: flex;
     flex-direction: column;
     padding-top: 5vh;
@@ -281,7 +444,7 @@ footer{
 }
 
 
-.nossos_conteudos{
+.nossos_conteudos {
     display: flex;
     flex-direction: column;
     padding-top: 5vh;
