--- a/pagina-chamado/chamado-style.css
+++ b/pagina-chamado/chamado-style.css
@@ -5,13 +5,13 @@ body {
 
 
 .caixa-navbar-chamado {
-    background-color: #26B0BF;
-    /* background-color: #4cc4d1; */
+    background-color: #6695F2;
     width: 20%;
     display: flex;
     flex-direction: column;
     padding-bottom: 10%;
-
+    border-start-end-radius: 50px;
+    border-bottom-right-radius: 50px;
 }
 
 .navbar-chamado {
@@ -24,43 +24,39 @@ body {
 }
 
 #botao-um {
-    background-color:rgba(255, 255, 255, 0.321);
-    padding: 20px 90px 20px 90px;
-    border-end-start-radius: 50px;
+    margin-top: 30px;
+    background-color: #8BABF7;
+    padding: 20px 80px 20px 90px;
+    border-start-end-radius: 50px;
+    border-bottom-right-radius: 50px;
 }
 
 #botao-dois {
-    background-color: rgba(255, 255, 255, 0.318);
+    background-color: #8BABF7;
     padding: 20px 90px 20px 90px;
-    border-end-start-radius: 50px;
-}
-
-#botao-tres {
-    background-color: rgba(255, 255, 255, 0.318);
-    padding: 20px 75px 20px 90px;
-    border-end-start-radius: 50px;
+    border-start-end-radius: 50px;
+    border-bottom-right-radius: 50px;
 }
 
 #botao-sair {
-    background-color: #ff6961;
+    background-color: #000000;
     width: 100px;
     border-radius: 50px;
     margin-top: 20px;
-    color: white;
     margin-left: 80px;
-    font-weight: 600;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .caixa-chamados {
     width: 100%;
     display: flex;
     flex-direction: row;
-    background: linear-gradient(180deg, #26B0BF, white);
+    background: linear-gradient(180deg, #D5DEFB, #8BABF7, #000000);
 }
 
 .titulo-chamado{
-    text-align: justify;
-    color: #26B0BF;
+    color: black;
     font-size: 50px;
 }
 
@@ -69,7 +65,7 @@ body {
     color: rgb(97, 96, 96);
     font-weight: 0;
     font-size: 20px;
-    margin-right: 50px;
+    margin-right: 100px;
 }
 
 .botao-chamado {
@@ -78,12 +74,22 @@ body {
     font-weight: 600;
     border-radius: 5px;
     color: white;
-    background-color: #26B0BF;
+    background-color: #6695F2;
     margin-top: 20px;
 }
 
+#sel_chamado {
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: 600;
+    color: white;
+    border-radius: 5px;
+    background-color: gray;
+    margin-top: 15px;
+}
+
 #ta_chamado {
-    height: 300px;
+    height: 250px;
     width: 700px;
     font-size: 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -100,20 +106,10 @@ body {
     font-weight: 600;
     border-radius: 5px;
     margin-top: 10px;
+    margin-bottom: 10px;
     color: white;
     background-color: #F21616;
 
-}
-
-p {
-    color: white;
-    text-align: justify;
-    padding: 20px 20px 20px 20px;
-}
-
-#img-alerta {
-    float: right;
-    margin-left: 20px;
 }
 
 .caixas {
@@ -121,17 +117,11 @@ p {
     width: 80%;
     margin-right: 3%;
     margin-left: 3%;
-    padding-left: 10%;
+    padding-left: 70px;
     margin-top: 3%;
     margin-bottom: 3%;
 }
 
-a:hover {
-    align-items: center;
-    margin-left: 5px;
-    margin-right: 2px;
-    color: white;
-}
 
 .conteudo_footer {
     background-color: black;
