--- a/pagina-notificacao/style-usuario.css
+++ b/pagina-notificacao/style-usuario.css
@@ -56,7 +56,8 @@ body {
     background: linear-gradient(180deg, #D5DEFB, #8BABF7, #000000);
 }
 
-p { font-size: 90%;
+p { 
+    font-size: 90%;
     color: black;
     text-align: justify;
     padding: 20px 20px 20px 20px;
