--- a/simulador-thermocarry/simuladorestilo.css
+++ b/simulador-thermocarry/simuladorestilo.css
@@ -1,13 +1,13 @@
 body {
     margin: 0px;
-    background-image: linear-gradient(to bottom, #61CBED, #ffffff 80%); 
+    background: linear-gradient(180deg, #D5DEFB, #8BABF7, #000000);
     font-family: sans-serif;
     overflow-x: hidden;
 }
 
 
 header{
-    background-color: #61CBED;
+    background-color: #6695F2;
     display: flex;
     width: 100vw;
     box-shadow: 0px 4px 8px white;
@@ -60,7 +60,7 @@ header .container{
 }
 
 #titulo-simulador {
-    font-size: 90px;
+    font-size: 50px;
     color: white;
     font-family: initial;
     justify-items: center;
@@ -68,13 +68,13 @@ header .container{
 }
 
 #sub-titulos-simulator {
-    font-size: 20px;
+    font-size: 18px;
     color: white;
     font-family: Verdana, Tahoma, sans-serif;
 }
 
 .conteudo-simulator {
-    background-color: #26b0bf4a;
+    background-color: #8BABF7;
     border-radius: 50px;
     align-items: center;
     width: 100%;
@@ -96,28 +96,29 @@ header .container{
 .caixa-simulador-dois{
     background-color: #ffffff4a;
     border-radius: 200px;
-    padding-top: 5%;
+    padding-top: 3%;
     padding-bottom: 5%;
     margin-left: 20%;
     margin-right: 20%;
-    
 }
 
 #sel_vacinas {
     width: 60%;
+    height: 30px;
     text-align: center;
     padding: 1%;
     border-radius: 50px;
     background-color: rgba(255, 255, 255, 0.536);
     font-family: Verdana, Tahoma, sans-serif;
-    color: #26B0BF;
-    font-size: 20px;
+    color: #6695F2;
+    font-size: 18px;
     border: 0;
 }
 
 #in_quantidade {
-    font-size: 25px;
+    font-size: 18px;
     width: 60%;
+    height: 18px;
     text-align: center;
     padding: 1%;
     border-radius: 50px;
@@ -126,8 +127,9 @@ header .container{
 }
 
 #in_taxa {
-    font-size: 25px;
+    font-size: 18px;
     width: 60%;
+    height: 18px;
     text-align: center;
     padding: 1%;
     border-radius: 50px;
@@ -136,8 +138,9 @@ header .container{
 }
 
 #in_viagens {
-    font-size: 25px;
+    font-size: 18px;
     width: 60%;
+    height: 18px;
     text-align: center;
     padding: 1%;
     border-radius: 50px;
@@ -166,12 +169,14 @@ header .container{
 #btn-simulator {
     padding: 3%;
     font-family: Verdana, Tahoma, sans-serif;
+    font-weight: 600;
     color: white;
     font-size: 20px;
-    background-color: #0086db;
+    background-color: #4c7ef3;
     border: 0;
     border-radius: 50px;
     box-shadow: rgba(0, 0, 0, 0.558) 1px 1px 3px 1px;
+    cursor: pointer;
 }
 
 #btn-simulator:hover {
