--- a/paginas-usuario/pagina-notificacao/notificacao-style.css
+++ b/paginas-usuario/pagina-notificacao/notificacao-style.css
@@ -1,26 +1,75 @@
 body {
-    /*height: 100vh;*/
-    margin: 0;
+    margin: 0px;
+    font-family: sans-serif;
+    background: linear-gradient(180deg, #D5DEFB, #8BABF7, #000000);
 }
 
 
-.caixa-navbar-notificacao {
+.conteudo {
+    display: flex;
+}
+
+
+.lateral {
+    height: 125vh;
+    width: 25vw;
+    border-top-right-radius: 10%;
+    border-bottom-right-radius: 10%;
     background-color: #6695F2;
-    width: 20%;
     display: flex;
     flex-direction: column;
-    padding-bottom: 10%;
-    border-start-end-radius: 50px;
-    border-bottom-right-radius: 50px;
+    box-shadow: 5px 0px 10px white;
 }
 
-.navbar-notificacao {
+.lateral img {
+    width: 95%;
+    height: 25%;
+    margin-left: 3%;
+}
+
+
+.navbar {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    text-align: center;
-    list-style: none;
     align-items: center;
-    font-size: 20px;
-    padding-left: 0px;
+    margin-top: 4%;
+}
+
+.navbar span{
+    margin: 8% 0%;
+    background-color: rgba(255, 255, 255, 0.322);
+    width: 18vw;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    color: white;
+    font-weight: 700;
+    font-size: 1.2em;
+    box-shadow: 0px 1px 10px white;
+}
+
+span a{
+    font-family: sans-serif;
+}
+
+#sair{
+    margin-top: 20%;
+    background-color: black;
+    border-radius: 2%;
+    width: 5vw;
+    height: 5vh;
+    box-shadow: 0px 0px 0px white;
+}
+
+a{
+    text-decoration: none;
+}
+
+a:visited{
+    color: white;
 }
 
 #botao-um {
