--- a/home-patrik/template.css
+++ b/home-patrik/template.css
@@ -221,6 +221,7 @@ main {
     text-shadow: 0px 5px 10px #61caed;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-bottom: 5%;
+    margin-top: -15px;
 
 
 }
