Adicionando dados nas metricas e o grafico estatico

--- a/site-estatico/paginas-usuario/dashboard/style.css
+++ b/site-estatico/paginas-usuario/dashboard/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0px;
     font-family: sans-serif;
     background: linear-gradient(180deg, #D5DEFB, #8BABF7, #000000);
+    height: 100vh;
 }
 
 
@@ -11,7 +12,7 @@ body {
 
 
 .lateral {
-    height: 120vh;
+    height: 100vh;
     width: 21.5vw;
     border-top-right-radius: 10%;
     border-bottom-right-radius: 10%;
@@ -80,8 +81,13 @@ a:visited{
     margin: 0 auto;
 }
 
-section {
-    background-color: white;
+.grafico_p{
+    background-color: rgba(255, 255, 255, 0.62);
+}
+
+
+#myChart{
+    height: 30vh;
 }
 
 .grafico h1 {
@@ -105,6 +111,8 @@ section {
 .dados_metricas{
     width: 7.5vw;
     height: 15vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .dados_metricas .p_critico{
@@ -154,28 +162,73 @@ section {
 
 #critico_e, #critico_d{
     /* background-color: #110F36; */
-    background-color: red; 
+    background-color: rgb(255, 113, 113); 
     border: 1px solid black;
 }
 
 #emergencia_e , #emergencia_d{
     /* background-color: #252175; */
-     background-color: orange; 
+     background-color: rgb(255, 207, 119); 
     border: 1px solid black;
 }
 
 #alerta_e , #alerta_d{
     /* background-color: #3933B5; */
-     background-color: yellow; 
+     background-color: rgb(255, 255, 148); 
     border: 1px solid black;
 }
 
 #ideal_e {
     /* background-color: #4D44F5; */
-     background-color: green; 
+     background-color: rgb(86, 164, 86); 
     border: 1px solid black;
     width: 15vw;
 } 
+
+.resultado_metricas{
+    background-color: rgba(255, 255, 255, 0.567);
+    border: solid 1px black;
+    width: 5.5vw;
+    height: 9vh;
+    margin: 0 auto;
+    margin-top: -5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.resultado_metricas p{
+    color: black;
+    font-weight: 900;
+    font-size: 2em;
+}
+
+
+#ideal_e{
+    display: flex;
+}
+
+.pai_resultado_ideal{
+    display: flex;
+    height: 12vh;
+    justify-content: center;
+    align-items: center;
+}
+
+
+#resultado_ideal1{
+    background-color: rgba(255, 255, 255, 0.567);
+    border: solid 1px black;
+    width: 5.5vw;
+    height: 9vh;
+}
+
+#resultado_ideal2{
+    background-color: rgba(255, 255, 255, 0.567);
+    border: solid 1px black;
+    width: 5.5vw;
+    height: 9vh;
+}
 
 
 
@@ -223,7 +276,6 @@ section {
     justify-content: center;
     align-items: center;
     border: solid 1px white;
-    margin-bottom: 5%;
 }
 
 .kpi2{
@@ -239,7 +291,6 @@ section {
     justify-content: center;
     align-items: center;
     border: solid 1px white;
-    margin-bottom: 5%;
 }
 
 .kpi h3{
