--- a/site-estatico/home/template.css
+++ b/site-estatico/home/template.css
@@ -3,6 +3,7 @@ body {
     background: linear-gradient(180deg, #D5DEFB, #8BABF7, #000000);
     font-family: sans-serif;
     overflow-x: hidden;
+    
 
 }
 
@@ -221,6 +222,7 @@ main {
     text-shadow: 0px 5px 10px #61caed;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-bottom: 5%;
+    margin-top: -15px;
 
 
 }
