--- a/site-estatico/login/login.css
+++ b/site-estatico/login/login.css
@@ -166,7 +166,7 @@ main .botao {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-#i_email {
+#i_nome {
     height: 30px;
     width: 200px;
     background-color: whitesmoke;
