--- a/site/public/css/dashboard-style.css
+++ b/site/public/css/dashboard-style.css
@@ -2,7 +2,7 @@ body {
     margin: 0px;
     font-family: sans-serif;
     background: linear-gradient(180deg, #D5DEFB, #8BABF7, #000000);
-    height: 100vh;
+    height: 120vh;
 }
 
 
@@ -12,7 +12,7 @@ body {
 
 
 .lateral {
-    height: 100vh;
+    height: 120vh;
     width: 21.5vw;
     border-top-right-radius: 10%;
     border-bottom-right-radius: 10%;
@@ -249,6 +249,10 @@ a:visited{
     color: white;
     padding: 0 5%;
     border-radius: 10px;
+}
+
+#lm35_temperatura{
+    margin-left: 20%;
 }
 
 
