--- a/site/public/css/dashboard-style.css
+++ b/site/public/css/dashboard-style.css
@@ -5,6 +5,105 @@ body {
     height: 120vh;
 }
 
+.modal_container {
+    position: absolute;
+    margin-top: 25%;
+    margin-left: 25%;
+    height: 20vh;
+    width: 20vw;
+    background-color: rgb(0, 0, 0);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    border: solid 3px black;
+}
+  
+
+.modal_critico{
+    background-color: rgb(255, 0, 0);
+    position: absolute;
+    margin-top: 25%;
+    margin-left: 25%;
+    height: 20vh;
+    width: 20vw;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    border: solid 3px black;
+    border-radius: 10px;
+}
+
+.modal_emergencial{
+    background-color: orange;
+    position: absolute;
+    margin-top: 25%;
+    margin-left: 25%;
+    height: 20vh;
+    width: 20vw;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    border: solid 3px black;
+    border-radius: 10px;
+}
+
+.modal_alerta{
+    background-color: yellow;
+    position: absolute;
+    margin-top: 25%;
+    margin-left: 25%;
+    height: 20vh;
+    width: 20vw;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    border: solid 3px black;
+    border-radius: 10px;
+}
+
+
+.modal_container.show {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+
+.button02 {
+     margin-bottom: 5%; 
+    margin-left: 17vw;
+    background-color: #9e9e9e;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+    border-radius: 40px;
+    height: 30px;
+    width: 30px;
+    font-size: 20px;
+    border-style: hidden;
+    box-shadow: 2px 2px 2px rgb(189, 188, 188);
+    cursor: pointer;
+    transition-duration: 0.4s;
+  }
+
+.modal {
+  width: 30vw;
+  max-width: 100%;
+  padding: 30px 50px;
+  border-radius: 15px;
+  text-align: center;
+}
+  
+.modal h2 {
+    margin-top: -16%;
+}
+  
+.modal p {
+    font-size: 14px;
+    opacity: 0.7;
+}
 
 .conteudo {
     display: flex;
